--- a/Процесс и поток.md
+++ b/Процесс и поток.md
@@ -10,7 +10,8 @@
 - Структура данных, содержащая всю информацию о процессе, в том числе список открытых дескрипторов различных системных ресурсов, уникальный идентификатор процесса, различную статистическую информацию и т.д.;
 - Адресное пространство - диапазон адресов виртуальной памяти, которым может пользоваться процесс;
 - Исполняемая программа и данные, проецируемые на виртуальное адресное пространство процесса.
-![[../_Resources/Attachments/Images/Pasted image 20240102211344.png]]
+![Pasted image 20240102211344](https://github.com/user-attachments/assets/e8792e19-2fe9-44b9-ac90-f950fafed49e)
+
 
 - Process ID: идентификатор каждого из процессов в ОС;
 - State: текущее состояние процесса;
@@ -22,7 +23,8 @@
 - Accounting Information: уровень нагрузки на процессор, статистика и другие данные;
 - I/O Information: список ресурсов, использующих чтение и запись.
 
-Процесс может находиться в нескольких состояниях:![[../_Resources/Attachments/Images/Pasted image 20240102211534.png]]
+Процесс может находиться в нескольких состояниях:![Pasted image 20240102211534](https://github.com/user-attachments/assets/3a88765d-3ac7-436f-9068-9b926b56b09b)
+
 
 - Start: начальное состояние при создании процесса;
 - Ready: процесс ожидает исполнения на процессоре. В течение работы процессор может переключаться между процессами, переводя одни в режим готовности, другие – в режим исполнения;
