Update Основные этапы процесса реагирования на инциденты ИБ.md

--- a/Основные этапы процесса реагирования на инциденты ИБ.md
+++ b/Основные этапы процесса реагирования на инциденты ИБ.md
@@ -1,6 +1,5 @@
 
-![[../_Resources/Attachments/Images/Pasted image 20240120164642.png]]
-
+![Pasted image 20240120164642](https://github.com/user-attachments/assets/00009546-8e05-4380-9d28-6cb02980a4d3)
 
 ### Подготовка (Preparation) 
 
@@ -15,7 +14,7 @@
 
 Сотрудники, занимающиеся реагированием на инциденты, должны определить, является ли обнаруженное ими с помощью различных систем обеспечения ИБ событие инцидентом или нет. Для этого могут использоваться публичные отчеты, потоки данных об угрозах, средства статического и динамического анализа образцов ПО и другие источники информации. Статический анализ выполняется без непосредственного запуска исследуемого образца и позволяет выявить различные индикаторы, например, строки, содержащие URL-адреса или адреса электронной почты. Динамический анализ подразумевает выполнение исследуемой программы в защищенной среде (Песочнице) или на изолированной машине с целью выявления поведения образца и сбора артефактов его работы (IOC).
 
-![[../_Resources/Attachments/Images/Pasted image 20240120164729.png]]
+![Pasted image 20240120164729](https://github.com/user-attachments/assets/7d9cdd1d-c973-4e65-85e3-2a2bb6da6feb)
 
 Сбор индикаторов компрометации является итерационным процессом. На основе первоначальной информации, полученной от SIEM-системы, происходит формирование сценариев обнаружения, применение которых, как правило, приводит к выявлению новых индикаторов компрометации. Полученные таким образом индикаторы помогают уточнить границы атаки и служат отправной точкой для нового цикла обнаружения. 
 
